Version 1.7 -Eta Carinae-

* [NEW] A single wiki-page can be a multi-page page using ...page... to sepparate pages,
  individual pages can be viewed using navigation links or a slideshow.
* [NEW] A wiki structure can be created/imported from a text representation of the tree
  where structure levels are depicted by indenting the text with single spaces.
* [NEW] All pages in a structure can be exported from the admin structures page
* [NEW] A text representation of a Wiki structure can be exported then it can be used
  to create (recreate) the structure in another system. 
* [NEW] Blogs: Blog posts now support multi-page posts, the first page will be displayed
  when listing blog posts (can be used as a heading) and the other pages are navigable
  when reading a blog post.
* [NEW] Articles: Multi-page articles are now supported, use "...page..." to sepparate
  pages in a multi-page article. Navigation links to article pages automatically added.
* [NEW] Articles: The permission tiki_p_autoapprove_submission was added, groups with
  that permission can submit articles that are automatically approved.
* [NEW] Articles: The list of articles can be configured choosing which columns should
  be displayed when listing articles.
* [NEW] Wiki: Optionally admin can choose if the user who creates a page has
  admin privileges over that page (remove, assign perms, etc)
* [NEW] Wiki: The listpages feature can be configured choosing what columns will
  be displayed in the listing.
* [NEW] MyTiki page reformatted to a tabbed interface.
* [FIX] Lethal bug in tikilib that caused cache engine to infinitely recurse has been
  resolved.
* [NEW] Forums: Posts can be reported to moderator.
* [NEW] File galleries: Up to 6 files can be uploaded at once. 
* [NEW] Forums control to view posts from the last X hours/days only.
* [NEW] File galleries dupes are now prevented.
* [NEW] File galleries improved, listings are configurable, files can be moved and
  deleted. Better interface. etc